scripts/nullaway/original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8.txt
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/Utils.java:44: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/Utils.java:52: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/Vertex.java:12: error: [NullAway] initializer method does not guarantee @NonNull field hilbertIndex (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Vertex(double x, double y) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/Triangle.java:78: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/Triangle.java:82: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Triangle oppositeAB = null;
	                 ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/Triangle.java:83: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Triangle oppositeBC = null;
	                 ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/Triangle.java:84: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Triangle oppositeCA = null;
	                 ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/Triangle.java:102: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Set<Triangle> neighbors = null;
	                      ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/Triangle.java:122: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Double area = null;
	               ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/Triangulation.java:49: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Triangle lastLocatedTriangle = null;
	                 ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/Triangulation.java:135: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/Triangulation.java:150: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return bestVertex;
		^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/Triangulation.java:326: error: [NullAway] passing @Nullable parameter 'toAdd' where @NonNull is required
			removeTriangles(toAdd);
			                ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/Triangulation.java:381: error: [NullAway] assigning @Nullable expression to @NonNull field
		lastLocatedTriangle = null;
		                    ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/Triangulation.java:434: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/Triangulation.java:448: error: [NullAway] returning @Nullable expression from method with @NonNull return type
				return null;
				^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/Triangulation.java:505: error: [NullAway] assigning @Nullable expression to @NonNull field
		lastLocatedTriangle = null;
		                    ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/dtfe/DtfeTriangulationMap.java:50: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Double maxDensity = null;
	               ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/TriangulationMap.java:45: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return map.inverse().get(value);
		^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/TriangulationMap.java:49: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return map.get(v);
		^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/dtfe/Dtfes.java:62: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
					null,
					^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/dtfe/Dtfes.java:69: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
					null,
					^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/dtfe/painters/DtfePainterModel.java:14: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Color edgeColor = null;
	              ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/HilbertTableIndex.java:92: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		if (index < 0 || index > (1 << (2*order))) return null;
		                                           ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/samples/SampleBuilder.java:80: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/dtfe/painters/TriangulationPainterModel.java:6: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Color edgeColor = null;
	              ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/dtfe/painters/TriangulationPainterModel.java:9: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Color vertexDotColor = null;
	              ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/ConvexPolygon.java:9: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Double area = null;
	               ^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/TriangulationMultimap.java:51: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return canonicalKeys.get(new Vertex(x, y));
		^
    (see http://t.uber.com/nullaway )
../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/Vectors.java:15: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    	return rect;
    	^
    (see http://t.uber.com/nullaway )
Note: ../original/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/Vector.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
30 errors
